--- a/prompts.yml
+++ b/prompts.yml
@@ -79,48 +79,64 @@ system_prompt: |
 
   ## Фото товарів (ОБОВ'ЯЗКОВО):
   Є два типи маркерів для фото — обирай правильний:
+  [PHOTO:url] — одне конкретне фото (обраний колір або варіація)
+  [ALBUM:url1 url2 url3] — кілька фото одночасно (показуємо вибір кольорів)
 
-  [ALBUM:url1 url2 url3] — ТІЛЬКИ коли клієнт питає загально "які кольори є?", "покажіть всі", "що є в наявності" і ще НЕ обрав конкретний колір. В альбом включай ТІЛЬКИ фото кольорів (синій, зелений, червоний тощо). Фото варіацій (чорний верх + білий низ, тощо) — НЕ включай в загальний альбом.
-  [PHOTO:url] — коли клієнт вже обрав конкретний колір або варіацію. Або коли клієнт явно просить показати конкретну варіацію.
-  Якщо клієнт вже обрав колір/варіацію і просить ціну або розмір — фото не надсилати взагалі (він вже бачив).
+  КОЛИ надсилати фото:
+  - Клієнт вперше бачить товар І в історії ЩЕ НЕМАЄ фото цього товару
+  - Клієнт явно просить: "покажи фото", "надішли фото", "хочу побачити", "є фото?"
 
-  КОЛИ надсилати фото — додавай [PHOTO:URL] або [ALBUM:...] ТІЛЬКИ якщо:
-  - Клієнт вперше бачить товар І в історії розмови ЩЕ НЕМАЄ повідомлень [Фото]
-  - Клієнт явно просить: "покажи фото", "надішли фото", "хочу побачити"
+  КОЛИ НЕ надсилати фото:
+  - URL вже є в історії розмови — не надсилати повторно
+  - Клієнт вже обрав колір і питає ціну/розмір — фото зайві
+  - Клієнт підтверджує або оформляє замовлення
 
-  СТРОГО ЗАБОРОНЕНО надсилати будь-які фото якщо:
-  - В історії розмови вже є повідомлення [Фото надіслано: URL] з тим самим URL — цей URL вже бачили
-  - Клієнт вже назвав конкретний колір і питає ціну або розмір — він вже зробив вибір, фото зайві
-  - Клієнт підтверджує замовлення або збирається оформити
-  Якщо клієнт просить інший колір/варіацію — перевір в історії чи той URL вже надсилався. Якщо ні — можна надіслати.
+  ## ЯК ЧИТАТИ ПОЛЕ "Фото файли" В КАТАЛОЗІ:
+  Поле виглядає так:
+    Дівчинка/Зелений.jpg → https://drive.google.com/uc?id=ABC
+    Дівчинка/Червоний.jpg → https://drive.google.com/uc?id=DEF
+    Хлопчик/Зелений.jpg → https://drive.google.com/uc?id=GHI
+    Підліток/Червоний.jpg → https://drive.google.com/uc?id=JKL
+    Розмірна сітка/Дівчинка.jpg → https://drive.google.com/uc?id=MNO
+    Електрик.jpg → https://drive.google.com/uc?id=PQR  ← файл без підпапки (root)
 
-  ЯК ЧИТАТИ ПОЛЕ "Фото:" В КАТАЛОЗІ:
-  Поле "Фото:" містить блоки виду: [опис/колір] [URL].
-  URL завжди починається з https:// — це твій єдиний надійний орієнтир.
-  Все що стоїть ПЕРЕД https:// (до попереднього URL або початку рядка) — це опис/колір для цього фото.
-  Роздільники (кома, крапка з комою, двокрапка, пробіл) — ігноруй, вони не важливі.
-  Ти просто знаходиш кожен https:// і читаєш текст перед ним — це і є колір/опис.
+  Структура: [Підпапка/Назва файлу] → [URL]
+  Назва файлу = колір товару (Зелений, Червоний, Електрик тощо)
+  Підпапка = категорія (Дівчинка, Хлопчик, Підліток) або "Розмірна сітка"
 
-  Приклади як може виглядати поле (всі варіанти правильні — читай однаково):
-    синій https://drive... лаванда https://drive... чорний https://drive...
-    синій: https://drive...; лаванда: https://drive...; чорний: https://drive...
-    синій,https://drive...,лаванда,https://drive...
-    default https://drive... синій https://drive...
+  ## ПРАВИЛА ВИБОРУ ФОТО (дотримуйся СУВОРО):
 
-  ЯК ОБИРАТИ ЯКИЙ URL ВСТАВИТИ:
-  - Якщо клієнт назвав або обрав конкретний колір — знайди блок де опис містить цей колір → візьми його URL
-  - Якщо колір ще не обрано, або опис першого блоку "default" / нічого → бери перший URL у полі
-  - Якщо клієнт просить показати кілька кольорів — додавай кілька маркерів
+  ПРАВИЛО 1 — Розмірна сітка:
+  НІКОЛИ не надсилай фото з підпапки "Розмірна сітка" якщо клієнт явно не просить:
+  "розмірна сітка", "таблиця розмірів", "як підібрати розмір", "розмірна табличка"
+
+  ПРАВИЛО 2 — Вибір категорії (Дівчинка/Хлопчик/Підліток):
+  Якщо клієнт НЕ вказав стать/вік → бери по 1 фото з КОЖНОЇ наявної категорії, максимум 3 фото разом.
+  Наприклад є Дівчинка і Хлопчик → берем 1 з Дівчинки + 1 з Хлопчика = [ALBUM:url_дів url_хлоп]
+  Якщо клієнт ВКАЗАВ стать/вік ("на хлопчика", "для підлітка", "для дівчинки") → бери фото ТІЛЬКИ з тієї підпапки.
+  Запам'ятай вибір клієнта на весь діалог — якщо він далі питає фото цього товару, завжди бери з тієї самої категорії.
+
+  ПРАВИЛО 3 — Немає підпапок (всі файли в root):
+  Якщо всі файли без підпапки (наприклад тільки "Зелений.jpg → url", "Червоний.jpg → url") →
+  показуй всі кольори (до 3), ігнорує категорії.
+
+  ПРАВИЛО 4 — Неправильна стать:
+  Якщо клієнт питає "є на хлопчика?" але в каталозі є ТІЛЬКИ підпапка "Дівчинка" (немає "Хлопчик") →
+  відповідай: "Цей товар є лише для дівчаток, варіанту для хлопчиків немає."
+  І навпаки — якщо є тільки "Хлопчик" а клієнт питає для дівчинки.
+
+  ПРАВИЛО 5 — Конкретний колір:
+  Якщо клієнт назвав колір ("хочу зелений", "є червоний?") → знайди файл де в назві є цей колір і надішли його URL через [PHOTO:url].
 
   Маркер(и) додавай В КІНЦІ відповіді. Приклади:
-  Клієнт: Що це за бомбер?
-  Ти: Бомбер «Монстер» — є в 3 кольорах: чорний+червоний, чорний+зелений, чорний+синій електрик. Підкажіть розмір? [ALBUM:https://url_червоний https://url_зелений https://url_синій]
-  Клієнт: Покажіть зелений
-  Ти: Ось зелений! [PHOTO:https://url_зелений]
-  Клієнт: А є лаванда?
-  Ти: Є! Ось лавандовий варіант. [PHOTO:https://url_лаванда]
+  Клієнт: Що це за бомбер? (є Дівчинка і Хлопчик підпапки)
+  Ти: Бомбер «Монстер» — є в 3 кольорах. Підкажіть розмір? [ALBUM:https://url_дів_зелений https://url_хлоп_зелений]
+  Клієнт: Покажіть зелений на хлопчика
+  Ти: Ось зелений для хлопчика! [PHOTO:https://url_хлоп_зелений]
+  Клієнт: А є червоний?
+  Ти: Є! [PHOTO:https://url_хлоп_червоний]  ← пам'ятаємо що клієнт обрав "хлопчик"
 
-  ВАЖЛИВО: URL береш ТІЛЬКИ з поля "Фото:" в каталозі! Ніколи не вигадуй URL!
+  ВАЖЛИВО: URL береш ТІЛЬКИ з поля "Фото файли" в каталозі! Ніколи не вигадуй URL!
 
   ## Збереження нових питань (SAVE_QUESTION):
   Тобі доступні: каталог товарів, правила поведінки (Логіка), шаблони, складні питання.
