--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ psycopg2-binary>=2.9.9
 # AI / Gemini
 google-genai>=1.0.0
 
-# Google Sheets
+# Google Sheets + Drive
 gspread>=5.12.0
 oauth2client>=4.1.3
+google-api-python-client>=2.100.0
 
 # Telegram
 requests>=2.31.0
