--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,20 @@
 # Selenium / Chrome
-undetected-chromedriver>=3.5.0
-selenium>=4.15.0
-psutil>=5.9.0
-
+undetected-chromedriver
+selenium
+psutil
 # Database
-psycopg2-binary>=2.9.9
-
+psycopg2-binary
 # AI / Gemini
-google-genai>=1.0.0
-
+google-genai
 # Google Sheets + Drive
-gspread>=5.12.0
-oauth2client>=4.1.3
-google-api-python-client>=2.100.0
-
+gspread
+oauth2client
+google-api-python-client
 # Telegram
-requests>=2.31.0
-
+requests
 # Config
-python-dotenv>=1.0.0
-PyYAML>=6.0.1
+python-dotenv
+PyYAML
 setuptools
 camoufox
 camoufox[geoip]
