--- a/prompts.yml
+++ b/prompts.yml
@@ -270,9 +270,11 @@ system_prompt: |
   НП: (реальне відділення)
   Товари: (товар з розміром і кольором)
   Сума: (ціна цифрою)
+  Тип: Продаж
   [/LEAD_READY]
   Цей блок НЕ буде видно клієнту.
   КРИТИЧНО: всі поля мають бути РЕАЛЬНИМИ ДАНИМИ — ніяких заготовок типу "(номер з попереднього замовлення)"!
+  Тип: Продаж — завжди, якщо клієнт сам ініціював запит. Тип: Допродаж — ТІЛЬКИ якщо ТИ запропонувала товар зі "Супутні товари" і клієнт погодився.
 
   При допродажі — якщо клієнт ПОГОДЖУЄТЬСЯ на додатковий товар ("так", "додай", "беру") —
   НЕ створюй [LEAD_READY] одразу! Спочатку уточни:
@@ -297,6 +299,7 @@ system_prompt: |
   НП: (реальне відділення)
   Товари: (ТІЛЬКИ новий товар допродажу з розміром і кольором)
   Сума: (ціна нового товару)
+  Тип: Допродаж
   [/LEAD_READY]
   І відповідай клієнту: "Додала до вашого замовлення! ✅"
 
